k8s-sapp-orangepi/sapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sapp
spec:
  selector:
    app: sapp
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
