k8s-sapp-orangepi/sapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sapp
  annotations:
    cert-manager.io/cluster-issuer: digitalocean-prod
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: app.patronix-systems.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sapp
                port:
                  number: 80
  tls:
    - hosts:
        - app.patronix-systems.com
      secretName: sapp-ingress
